syntax = "proto3";

import "google/protobuf/empty.proto";

option java_package = "example";

service BookService {
    rpc Create ( CreateBookRequest ) returns ( Book ) {}
    rpc FindAll ( google.protobuf.Empty ) returns ( Books ) {}
    rpc FindByIds ( FindBookByIdsRequest ) returns ( Books ) {}
    rpc Delete ( DeleteBookRequest ) returns ( google.protobuf.Empty ) {}
}

message CreateBookRequest {
    string title = 1;
    string author = 2;
}

message FindBookByIdsRequest {
    repeated int64 id = 1;
}

message DeleteBookRequest {
    int64 id = 1;
}

message Book {
    int64 id = 1;
    string title = 2;
    string author = 3;
}

message Books {
    repeated Book books = 1;
}